--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Weather API</title>
   </head>
-  <body class="no-repeat bg-cover bg-center bg-fixed min-h-screen flex items-center justify-center">
+  <body class="bg-[url('/img/w.gif')] no-repeat bg-cover bg-center bg-fixed min-h-screen flex items-center justify-center">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
